# Tri_Dashboard

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  FEATURE_PROPOSAL.md  PERFORMANCE_REVIEW.md  PR_DESCRIPTION.md  README.md  app.py  app1.py  app_v1.txt  brain_evolution_history.json  cycling_brain_weights.npz  init_db.py  pyproject.toml  requirements.txt  smo2_breakpoints_results.json  style.css  test_vt_detection.py  train_history.py  training_history.db  user_settings.json
.streamlit/: config.toml
Treningi CSV/: Arkusz kalkulacyjny bez tytułu - Trening-19.12.2025-import.csv  Arkusz kalkulacyjny bez tytułu - Trening-21.12.2025-import.csv  Arkusz kalkulacyjny bez tytułu - Trening-26.12.2025-import.csv  Trening-28.12.2025-import.csv  Trening-29.12.2025-import.csv  i100206406_streams.csv  i101711561_streams.csv  i102383450_streams.csv  i102546733_streams.csv  i102820058_streams.csv  i102829572_streams.csv  i103696909_streams.csv  i104136227_streams.csv  i104941267_streams.csv  i105256546_streams.csv  i105565006_streams.csv  i105853454_streams.csv  i106015835_streams.csv  i106241531_streams.csv  i106365848_streams.csv  i107359935_streams.csv  i107534293_streams.csv  i107869639_streams.csv  i108948366_streams.csv  i109552269_streams.csv  i109723965_streams.csv  i98283178_streams.csv  i98470115_streams.csv  i98551248_streams.csv
docs/: DOMAIN_MODEL.md  cleanup-candidates.md  pdf_generation_stack.md  physiological_methodology.md  power_duration.md  ramp_test_premium_report.md
experiments/: __init__.py
models/: __init__.py  results.py
modules/: async_utils.py  cache_utils.py  calculations.py  calculations_backup.py  chart_exporters.py  comparison.py  config.py  constants.py  environment.py  genetics.py  health_alerts.py  heatmaps.py  history_import.py  intervals.py  manual_overrides.py  ml_logic.py  monitoring.py  notes.py  physio_maps.py  plots.py  polars_adapter.py  power_duration.py  reports.py  settings.py  task_queue.py  training_load.py  tte.py  utils.py  voice_notes.py
physiology/: __init__.py
scripts/: generate_pdf_from_csv.py
services/: data_validation.py  session_analysis.py  session_orchestrator.py
tests/: __init__.py  (+62 more)
(+280 files in other folders)
