[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tri_dashboard"
version = "0.1.0"
description = "Advanced Triathlon Dashboard with AI Integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Wielki Krzych", email = "krzysztof@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "neurokit2>=0.2.7",
    "matplotlib>=3.8.0",
    "statsmodels>=0.14.0",
    "python-docx>=1.1.0",
    "mlx>=0.0.10",
    "numba>=0.59.0",
    "kaleido==0.2.1",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest-cov",
    "bandit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "services*", "models*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "C90", "B"]
ignore = ["E501"] # Line too long (handled by Black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --timeout=30"
testpaths = [
    "tests",
]
python_files = "test_*.py"

[tool.coverage.run]
source = ["modules", "models", "services"]
omit = [
    "modules/ui/*",
    "modules/reporting/pdf/*",
    "modules/ai/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "node_modules/",
    "tests/",
]
